--- a/package.json
+++ b/package.json
@@ -29,6 +29,10 @@
     "tailwind-variants": "^0.1.13",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
+    "uuid": "^9.0.0",
     "zod": "^3.22.2"
+  },
+  "devDependencies": {
+    "@types/uuid": "^9.0.2"
   }
 }
